engine/test/electron/scripts/lexer/errors/invalid_escape.e
// ERROR TEST: Invalid escape sequence
"invalid \q escape"
